Corrected alignment of Error message

--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,11 @@ body {
 }
 
 .container {
-  max-width: 400px;
+  max-width: 450px;
   margin: 50px auto;
   background-color: #fff;
   border-radius: 5px;
-  padding: 20px;
+  padding: 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -21,11 +21,10 @@ h1 {
 .myname {
   display: block;
   text-align: center;
-  margin-bottom: 10px; /* Optional: Add margin for spacing */
 }
 
 .form-group {
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   display: flex; /* Use flexbox to maintain inline formatting */
   align-items: center; /* Vertically center items */
 }
@@ -33,12 +32,13 @@ h1 {
 .form-group label {
   flex: 1; /* Let labels take as much space as they need */
   text-align: right;
+  font-size: medium;
   margin-right: 10px;
 }
 
 .form-group input {
   flex: 2; /* Let input fields take more space */
-  padding: 8px;
+  padding: 13px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
@@ -67,8 +67,10 @@ input[type="range"]::-moz-range-thumb {
 
 .error-message {
   color: red;
-  padding-left: 135px;
+  font-size: smaller; /* Adjust font size */
+  text-align: right;
 }
+
 
 @media only screen and (max-width: 600px) {
   .form-group {
